--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "abcmaine.beer",
-  "homepage": "https://roots.io/sage/",
+  "homepage": "http://pixleight.github.io/abcmaine.beer/",
   "authors": [
     "Chris Violette <chris@pixleight.com>"
   ],
